# flystat-rs

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md
src/: BUILD.bazel  hello_world.rs
tools/: setup.sh
tools/git/: pre-commit  rustfmt.sh
